Group similarities and fix context stacking
Make bg pallettes appear behind content and group the similarities between before and after pseudo elements

--- a/styles/sytle.css
+++ b/styles/sytle.css
@@ -39,23 +39,22 @@ body{
   padding-bottom: 10px;
 }
 /* Set the background pallettes */
-.container::before{
+.container::before, .container::after{
   content: "";
   position: absolute;
-  top: 0;
   left: 0;
-  right: 0;
-  background: url(../images/bg-pattern-top-mobile.svg) no-repeat;
   width: 100%;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.container::before{
+  top: 0;
+  background: url(../images/bg-pattern-top-mobile.svg) no-repeat;
   height: 300px;
 }
 .container::after{
-  content: "";
-  position: absolute;
   bottom: 0;
-  left: 0;
   background: url(../images/bg-pattern-bottom-mobile.svg) no-repeat;
-  width: 100%;
   height: 400px;
 }
 /* Set the basic elements layout */
